# ethio-receipt-verify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ethio_receipt_verify/: __init__.py  cli.py  errors.py  registry.py  result.py
src/ethio_receipt_verify/banks/: __init__.py  awash.py  base.py  boa.py  cbe.py  cbebirr.py  dashen.py  kaafiebirr.py  mpesa.py  siinqee.py  telebirr.py  zemen.py
tests/: test_banks.py
