[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethio-receipt-verify"
version = "0.1.0"
description = "Free, open-source Ethiopian bank/wallet receipt verification. Reverse-engineered public endpoints."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "1RB"}
]
keywords = ["ethiopia", "receipt", "verification", "cbe", "telebirr", "bank"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pdfplumber>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "reportlab>=4.0.0",
]

[project.scripts]
ethio-verify = "ethio_receipt_verify.cli:main"

[project.urls]
Homepage = "https://github.com/1RB/ethio-receipt-verify"
Repository = "https://github.com/1RB/ethio-receipt-verify"
Issues = "https://github.com/1RB/ethio-receipt-verify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ethio_receipt_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
